# prox-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  models.py  pyproject.toml  render.yaml  render_logs.txt
agents/: __init__.py  artifact_agent.py  base.py  diagnostic_agent.py  orchestrator.py  retrieval_agent.py  vision_agent.py
app/: __init__.py  auth_store.py  config.py  models.py  prompts.py  response_cache.py  server.py  services.py  utils.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ArtifactRenderer.tsx  Message.tsx
frontend/src/lib/: api.ts  deepgram.ts  joinStreamText.ts  parseArtifacts.ts  tts.ts  types.ts
preprocessing/: __init__.py  extract.py
tools/: __init__.py  build_cache.py  deepgram_tts.py  local_embeddings.py  local_tts.py  pages.py  prefetch_embedding_model.py  retrieval_tuning_cases.json  search.py  synthesize_speech.ps1  tune_retrieval.py
